# object_detection_system_plc_yolo

./: .gitignore  README.md  install_pyfins.bat  install_pyfins.sh  plc_test_server.py  pyproject.toml  requirements.txt  start.py  start.sh  validation_yolo_data.ipynb  yolo_system.bat
settings/: plc_settings.yaml  yolo_detect.yaml  yolo_detect_format.yaml
yolo_system/: manage.py  manual_camera_test.py  simple_camera_test.py  test_project_folders.py
yolo_system/annotator/: admin.py  models.py  tests.py  urls.py  views.py
yolo_system/checker/: admin.py  apps.py  checker_consumers.py  models.py  routing.py  urls.py  views.py
yolo_system/checker/applications/: detect.py  get_img.py  plc_monitor.py  quality_verify.py  snap_service.py
yolo_system/checker/static/: checker_index.css  checker_index.js
yolo_system/checker/templates/: checker_index.html  select_project.html
yolo_system/configuration/: admin.py  models.py  tests.py  urls.py  views.py
yolo_system/crop_app/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
yolo_system/get_imgs/: __init__.py  admin.py  apps.py  get_imgs_consumers.py  models.py  routing.py  urls.py  views.py
yolo_system/training/: admin.py  consumers.py  models.py  routing.py  tests.py  urls.py  views.py
yolo_system/yolo_system/: asgi.py  settings.py  urls.py  wsgi.py
zzz_docs/: annotator_docs.md  checker.md  checker_design_sheet.md  configuration.md  crop_app.md  get_imgs.md  plc_monitor_flow.md  project_folder_construction.md  training.md
zzz_manuals/: DETECT_CONF.md  HOW_TO_USE.md  TRAINING_CONF.md
(+43 files in other folders)
