[project]
name = "yolo-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.2.2",
    "daphne>=4.2.0",
    "django>=5.2.4",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pip>=25.1.1",
    "pyyaml>=6.0.2",
    "ultralytics>=8.3.158",
]
